Fixed stretched footer logo

--- a/resources/scss/partials/footer.scss
+++ b/resources/scss/partials/footer.scss
@@ -30,8 +30,8 @@
 
                 height: 45px;
                 img{
-                    width: 100%;
-                    height: 100%;
+                    height: 45px;
+                    width: 45px;
                 }
             }
             .footer-about-socials{
